2006-02-18  Jim Evins  <evins@snaught.com>

	* src/print.c: (draw_line_object):
	* src/view-line.c: (gl_view_line_new),
	(construct_properties_editor), (update_canvas_item_from_object_cb),
	(update_object_from_editor_cb), (update_editor_from_object_cb),
	(update_editor_from_label_cb):
		Added shadow support to line object.

2006-02-16  Jim Evins  <evins@snaught.com>

	* src/view-box.c:
		Comment changes.
	* src/print.c: (draw_ellipse_object):
	* src/view-ellipse.c: (gl_view_ellipse_new),
	(construct_properties_editor), (update_canvas_item_from_object_cb),
	(update_object_from_editor_cb), (update_editor_from_object_cb),
	(update_editor_from_label_cb):
		Added shadow support to ellipse object.

2006-02-15  Jim Evins  <evins@snaught.com>

	* src/label-object.c:
		Changed default shadow offsets.
	* src/view-box.c: (gl_view_box_new):
		Simplified gl_view_box_new() so that is does not duplicate code
		in update_canvas_item_from_object_cb().

2006-02-07  Jim Evins  <evins@snaught.com>

	* data/glade/object-editor.glade:
		Fixed color groups of color combos.
	* src/color.h:
		Added default shadow color.
	* src/object-editor.c: (gl_object_editor_construct_color_combo):
		Added shadow color group.

2006-02-06  Jim Evins  <evins@snaught.com>

	* src/object-editor-shadow-page.c:
		Forgot to add this file.
	* src/view-box.c: (gl_view_box_new),
	(update_canvas_item_from_object_cb), (update_editor_from_label_cb):
		Update limits on shadow offset spinbuttons.

2006-01-19  Jim Evins  <evins@snaught.com>

	* src/merge-evolution.c: (gl_merge_evolution_get_key_list):
		Initialize key_list to NULL.
	* data/glade/object-editor.glade:
	* src/Makefile.am:
	* src/color.c:
	* src/color.h:
	* src/label-object.c:
	* src/label-object.h:
	* src/object-editor-fill-page.c:
	* src/object-editor-private.h:
	* src/object-editor.c:
	* src/object-editor.h:
	* src/xml-label.c:
		Created infrastructure for shadow support.
	* src/view-box.c:
	* src/print.c:
		Initial shadow support in box object only.
	